--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="js/coffee-script.js" type="text/javascript"></script>
 	<script src="js/jquery.js" type="text/javascript"></script>
 	<script src="js/bootstrap.js" type="text/javascript"></script>
+	<script src="js/moment-with-langs.min.js" type="text/javascript"></script>
 	<script src="js/backlog.js" type="text/javascript"></script>
 </head>
 <body>
